--- a/apps/admin/view/default/content/content.html
+++ b/apps/admin/view/default/content/content.html
@@ -54,7 +54,7 @@
 		                    		<input type="hidden" name="listall[]" value="[value->id]">
 		                    	</td>
 		                    	<td>[value->id]</td>
-		                        <td title="[value->scode]">[value->sort_name]</td>
+		                        <td title="[value->scode]">[value->sortname]</td>
 		                        <td title="[value->title]">
 		                        {fun=substr_both($value->title,0,15)}
 		                        {if($value->isheadline)}
@@ -95,14 +95,27 @@
 			                    </td>
 			                    <td>[value->visits]</td>
 		                        <td>
-		                        	{php}$value->contenturl=$value->contenturl?:'content';{/php}
-		                        	{if($value->filename)}
-		                        	<input type="hidden" name="urls[[value->id]]" value="{homeurl./home/Index/'.$value->filename.'}">
-		                        	<a href="{homeurl./home/Index/'.$value->filename.'}" class="layui-btn layui-btn-xs layui-btn-primary"  target="_blank">查看</a>
-		                        	{else}
-		                        	<input type="hidden" name="urls[[value->id]]" value="{homeurl./home/Index/'.$value->contenturl.[$url_connector].$value->id.'}">
-		                        	<a href="{homeurl./home/Index/'.$value->contenturl.[$url_connector].$value->id.'}" class="layui-btn layui-btn-xs layui-btn-primary"  target="_blank">查看</a>
-		                        	{/if}
+		                        	{php}
+			                        	$sortfilename = $value->sortfilename;
+			                        	$contentfilename = $value->filename;
+			                        	$id = $value->id;
+			                        	$urlname = $value->urlname?:'list';
+			                        	$scode = $value->scode;
+			                        	$url_break_char= get_var('url_break_char');
+			                        	
+			                        	if ($sortfilename && $contentfilename) {
+						                    $link = homeurl('home/Index/' . $sortfilename . '/' . $contentfilename, true);
+						                } elseif ($sortfilename) {
+						                    $link = homeurl('home/Index/' . $sortfilename . '/' . $id, true);
+						                } elseif ($contentfilename) {
+						                    $link = homeurl('home/Index/' . $urlname . $url_break_char . $scode . '/' . $contentfilename, true);
+						                } else {
+						                    $link = homeurl('home/Index/' . $urlname . $url_break_char . $scode . '/' . $id, true);
+						                }
+		                        	{/php}
+
+		                        	<input type="hidden" name="urls[[value->id]]" value="{php}echo $link{/php}">
+		                        	<a href="{php}echo $link{/php}" class="layui-btn layui-btn-xs layui-btn-primary"  target="_blank">查看</a>
 		                            {fun=get_btn_del($value->id)}
 		                            {if(check_level('mod'))}
 		                            	<a href="{url./admin/Content/mod/mcode/'.get('mcode').'/id/'.$value->id.'}{$btnqs}" class="layui-btn layui-btn-xs" >修改</a>
