--- a/apps/admin/view/default/content/content.html
+++ b/apps/admin/view/default/content/content.html
@@ -393,9 +393,9 @@
 			                 </div>
 			                 
 			                 <div class="layui-form-item">
-			                     <label class="layui-form-label">自定义路径名</label>
+			                     <label class="layui-form-label">URL名称</label>
 			                     <div class="layui-input-block">
-			                     	<input type="text" name="filename" placeholder="请输入自定义路径名，如:test" class="layui-input">
+			                     	<input type="text" name="filename" placeholder="请输入URL名称，如:test" class="layui-input">
 			                     </div>
 			                 </div>
 			                 
@@ -734,9 +734,9 @@
 			                 </div>
 			                 
 			                 <div class="layui-form-item">
-			                     <label class="layui-form-label">自定义路径名</label>
+			                     <label class="layui-form-label">URL名称</label>
 			                     <div class="layui-input-block">
-			                     	<input type="text" name="filename" value="{$content->filename}" placeholder="请输入自定义路径名，如:test" class="layui-input">
+			                     	<input type="text" name="filename" value="{$content->filename}" placeholder="请输入URL名称，如:test" class="layui-input">
 			                     </div>
 			                 </div>
 			                 
