--- a/apps/admin/view/default/system/home.html
+++ b/apps/admin/view/default/system/home.html
@@ -7,7 +7,7 @@
         {if(![$dbsecurity])}
 		<p>
 			<i class="fa fa-info-circle" aria-hidden="true"></i>
-			您的数据库文件存在安全隐患，可能被下载，请尽快修改数据库路径！<a class="layui-btn  layui-btn-sm" href="?action=moddb">自动修改</a>
+			您的数据库文件存在安全隐患，可能被下载，请尽快修改数据库路径！<a class="layui-btn  layui-btn-sm" href="{url./admin/Index/home}&action=moddb">自动修改</a>
 		</p>
 		{/if}
 		
@@ -119,7 +119,7 @@
 				  <tbody>
 				  	<tr>
 	                    <th>版权所有</th>
-	                    <td>湖南翱云网络科技有限公司</td>
+	                    <td>PbootCMS</td>
 	                </tr>
 	
 	                <tr>
