--- a/apps/admin/view/default/index.html
+++ b/apps/admin/view/default/index.html
@@ -60,7 +60,7 @@
 	
 	<div class="layui-trans user-login-footer">
 		<p>© 2018 <a href="http://www.pbootcms.com/" target="_blank">pbootcms.com</a></p>
-		<p> <span><a href="http://www.hnaoyun.com" target="_blank">翱云科技</a></span> <span><a href="http://demo.pbootcms.com" target="_blank">在线演示</a></span> <span><a href="http://www.pbootcms.com" target="_blank">前往官网</a></span> </p>
+		<p><span><a href="http://demo.pbootcms.com" target="_blank">在线演示</a></span><span><a href="http://www.pbootcms.com" target="_blank">前往官网</a></span> </p>
 	</div>
 	
 </div>
