--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -194,7 +194,7 @@
 						</div>
 						<script>
 					    	function sendtest(obj,to){
-					    		$(obj).attr('href',$(obj).attr('href')+'?to='+$(to).val()); 
+					    		$(obj).attr('href',$(obj).attr('href')+'&to='+$(to).val()); 
 					    		return true;
 					    	}
 					    </script>
