--- a/template/default/message.html
+++ b/template/default/message.html
@@ -73,6 +73,7 @@
                     </div>
                 </div>
                 
+                {if([$config.message_check_code])}
                 <div class="form-group">
                     <label for="checkcode">验证码</label>
                     <div class="row">
@@ -84,6 +85,7 @@
                         </div>
                     </div>
                 </div>
+                {/if}
                 
                 <div class="form-group">
                    <button type="submit" class="btn btn-info mb-2">提交留言</button>
