--- a/apps/admin/view/default/system/upgrade.html
+++ b/apps/admin/view/default/system/upgrade.html
@@ -175,50 +175,52 @@ function down(){
 	var len = $(checked).length;
 	var exe=0;
 	$(checked).each(function(index,element){
-		 $.ajax({
-	    	  type: 'POST',
-	    	  url: url,
-	    	  dataType: 'json',
-	    	  async:true,
-	    	  data: {
-	    		  list:$(element).val()
-	    	  },
-	    	  success: function (response, status) {
-	    		 if(response.code==1){
-	    			 exe++;
-	    			 $('#layer-content').text(response.data);
-	    		 }else{
-	    			 layer.close(lyindex);
-	     			 layer.msg(response.data, {icon: 5}); 
-	    		 }
-	    		 
-	    		 if(exe==len){
-		  			layer.close(lyindex);
-		  	   	 	layer.open({
-		  			  type: 0,
-		  			  title:'下载更新',
-		  			  closeBtn:0,
-		  			  btn: ['立即更新', '稍后更新'],
-		  			  content: '所选文件全部下载完成!',
-		  			  yes: function(index, layero){
-		  				  layer.close(index); 
-		  				  $('#update').click();
-		  				  
-		  			   },
-		  			  btn2: function(index, layero){
-		  				 layer.close(index); 
-		  				 window.location.href = '{url./admin/Upgrade/index/action/local}';
-		  			   }
-		  			});
-		  	   	 	$('#update').show();
-		  			$('#down').hide();
-		  		 } 
-	         },
-	         error:function(xhr,status,error){
-	       	  layer.close(lyindex);
-	        	  layer.msg("下载更新文件发生错误!", {icon: 5});
-	         }
-	   	});
+		 setTimeout(function () { //延迟执行、避免文件太多卡死问题
+			 $.ajax({
+		    	  type: 'POST',
+		    	  url: url,
+		    	  dataType: 'json',
+		    	  async:true,
+		    	  data: {
+		    		  list:$(element).val()
+		    	  },
+		    	  success: function (response, status) {
+		    		 if(response.code==1){
+		    			 exe++;
+		    			 $('#layer-content').text(response.data);
+		    		 }else{
+		    			 layer.close(lyindex);
+		     			 layer.msg(response.data, {icon: 5}); 
+		    		 }
+		    		 
+		    		 if(exe==len){
+			  			layer.close(lyindex);
+			  	   	 	layer.open({
+			  			  type: 0,
+			  			  title:'下载更新',
+			  			  closeBtn:0,
+			  			  btn: ['立即更新', '稍后更新'],
+			  			  content: '所选文件全部下载完成!',
+			  			  yes: function(index, layero){
+			  				  layer.close(index); 
+			  				  $('#update').click();
+			  				  
+			  			   },
+			  			  btn2: function(index, layero){
+			  				 layer.close(index); 
+			  				 window.location.href = '{url./admin/Upgrade/index/action/local}';
+			  			   }
+			  			});
+			  	   	 	$('#update').show();
+			  			$('#down').hide();
+			  		 } 
+		         },
+		         error:function(xhr,status,error){
+		       	      layer.close(lyindex);
+		        	  layer.msg("下载更新文件发生错误!", {icon: 5});
+		         }
+		   	});
+		}, index*500);
     });
 }
    	
