--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -46,6 +46,7 @@
 		                     <div class="layui-input-inline">
 		                     	<input type="text" name="tpl_html_cache_time"  value="{$configs.tpl_html_cache_time.value}" placeholder="请输入缓存有效期（秒）"  class="layui-input">
 		                     </div>
+		                     <div class="layui-form-mid layui-word-aux">秒</div>
 		                </div>
 		                
 		                <div class="layui-form-item">
@@ -69,6 +70,7 @@
 		                     <div class="layui-input-inline">
 		                     	<input type="text" name="pagenum"  value="{$configs.pagenum.value}" placeholder="请输入前端分页数字条显示数量"  class="layui-input">
 		                     </div>
+		                     <div class="layui-form-mid layui-word-aux">条</div>
 		                </div>
 		                
 		                <div class="layui-form-item">
@@ -76,6 +78,7 @@
 		                     <div class="layui-input-inline">
 		                     	<input type="text" name="content_tags_replace_num"  value="{$configs.content_tags_replace_num.value}" placeholder="请输入文章内链替换次数，默认3次"  class="layui-input">
 		                     </div>
+		                     <div class="layui-form-mid layui-word-aux">次</div>
 		                </div>
 		                
 		                {if(![$configs.sn_user.value])}
@@ -206,11 +209,14 @@
 			  	   	    <input type="hidden" name="formcheck" value="{$formcheck}" > 
 		                
 		                <div class="layui-form-item">
-		                     <label class="layui-form-label">链接推送token</label>
+		                     <label class="layui-form-label">普通推送token</label>
 		                     <div class="layui-input-inline">
-		                     	<input type="text" name="baidu_zz_token"  value="{$configs.baidu_zz_token.value}" placeholder="请输入百度链接推送token"  class="layui-input">
+		                     	<input type="text" name="baidu_zz_token"  value="{$configs.baidu_zz_token.value}" placeholder="请输入百度普通推送token"  class="layui-input">
 		                     </div>
+		                     <span class="layui-icon layui-icon-about tips" data-content="请到百度站长中心的链接提交栏目中获取！"></span>
 		                </div>
+		                
+		                <hr>
 		               
 		               <div class="layui-form-item">
 		                     <label class="layui-form-label">熊掌号appid</label>
@@ -399,6 +405,7 @@
 		                     <div class="layui-input-inline">
 								<input type="text" name="lock_count" value="{$configs.lock_count.value}" placeholder="请输入登录失败几次后锁定IP，默认5次" class="layui-input">
 		                     </div>
+		                     <div class="layui-form-mid layui-word-aux">次</div>
 		                </div>
 		                
 		                <div class="layui-form-item">
@@ -406,6 +413,7 @@
 		                   <div class="layui-input-inline">
 		                  		<input type="text" name="lock_time" value="{$configs.lock_time.value}" placeholder="请输入登录异常锁定时间，默认为900秒" class="layui-input">
 		                   </div>
+		                   <div class="layui-form-mid layui-word-aux">秒</div>
 			            </div>
 		                
 		                <div class="layui-form-item">
@@ -425,16 +433,24 @@
 		                     <label class="layui-form-label">地址模式</label>
 		                     <div class="layui-input-block">
 		                     	<P>
-		                     		<input type="radio" name="url_rule_type" value="1" {if([$configs.url_rule_type.value]==1)} checked="checked" {/if} title="普通模式，例：https://www.pbootcms.com/index.php/news/1.html">
+		                     		<input type="radio" name="url_rule_type" value="1" {if([$configs.url_rule_type.value]==1)} checked="checked" {/if} title="普通模式，格式：/index.php/product/1.html">
 		                     		<span class="layui-icon layui-icon-about tips" data-content="基本模式需要服务器支持pathinfo,特别是nginx下pathinfo要手动配置！"></span>
 		                     	</P>
 		                     	<P>
-		                     		<input type="radio" name="url_rule_type" value="2" {if([$configs.url_rule_type.value]==2)} checked="checked" {/if} title="伪静态模式，例：https://www.pbootcms.com/news/1.html">
+		                     		<input type="radio" name="url_rule_type" value="2" {if([$configs.url_rule_type.value]==2)} checked="checked" {/if} title="伪静态模式，格式：/product/1.html">
 		                     		<span class="layui-icon layui-icon-about tips" data-content="伪静态时需要服务器环境的支持，并需要添加伪静态规则！"></span>
 								</P>
 		                     	<P>
-									<input type="radio" name="url_rule_type" value="3" {if([$configs.url_rule_type.value]==3||![$configs.url_rule_type.value])} checked="checked" {/if} title="兼容模式，例：https://www.pbootcms.com/?news/1.html">
+									<input type="radio" name="url_rule_type" value="3" {if([$configs.url_rule_type.value]==3||![$configs.url_rule_type.value])} checked="checked" {/if} title="兼容模式，格式：/?product/1.html">
 								</P>
+		                     </div>
+		                </div>
+		                
+		               <div class="layui-form-item">
+		                     <label class="layui-form-label">栏目显示后缀</label>
+		                     <div class="layui-input-block">
+		                     	<input type="radio" name="url_rule_sort_suffix" value="1" {if([$configs.url_rule_sort_suffix.value]==1)} checked="checked" {/if} title="启用">
+								<input type="radio" name="url_rule_sort_suffix" value="0" {if([$configs.url_rule_sort_suffix.value]==0)} checked="checked" {/if} title="禁用">
 		                     </div>
 		                </div>
 		                
