--- a/apps/admin/view/default/system/config.html
+++ b/apps/admin/view/default/system/config.html
@@ -387,16 +387,16 @@
 		                </div>
 		                
 		                <div class="layui-form-item">
-		                     <label class="layui-form-label">登陆失败阀值</label>
+		                     <label class="layui-form-label">登录失败阀值</label>
 		                     <div class="layui-input-inline">
-								<input type="text" name="lock_count" value="{$configs.lock_count.value}" placeholder="请输入登陆失败几次后锁定IP，默认5次" class="layui-input">
+								<input type="text" name="lock_count" value="{$configs.lock_count.value}" placeholder="请输入登录失败几次后锁定IP，默认5次" class="layui-input">
 		                     </div>
 		                </div>
 		                
 		                <div class="layui-form-item">
 		                   <label class="layui-form-label">失败锁定时间</label>
 		                   <div class="layui-input-inline">
-		                  		<input type="text" name="lock_time" value="{$configs.lock_time.value}" placeholder="请输入登陆异常锁定时间，默认为900秒" class="layui-input">
+		                  		<input type="text" name="lock_time" value="{$configs.lock_time.value}" placeholder="请输入登录异常锁定时间，默认为900秒" class="layui-input">
 		                   </div>
 			            </div>
 		                
