--- a/apps/admin/view/default/system/home.html
+++ b/apps/admin/view/default/system/home.html
@@ -118,18 +118,21 @@
 				 
 				  <tbody>
 				  	<tr>
-	                    <th>版权所有</th>
-	                    <td>PbootCMS</td>
+	                    <th>系统名称</th>
+	                    <td>PbootCMS企业网站开发建设管理系统</td>
 	                </tr>
 	
 	                <tr>
 	                    <th>官方网站</th>
-	                    <td><a href="http://www.pbootcms.com" target="_blank">pbootcms.com</a></td>
+	                    <td><a href="http://www.pbootcms.com" target="_blank" style="color:#666">www.pbootcms.com</a></td>
 	                </tr>
 	                
 				  	<tr>
-	                    <th>码云地址</th>
-	                    <td><a href="https://gitee.com/hnaoyun/PbootCMS/releases" target="_blank">查看最新版</a></td>
+	                    <th>源码下载</th>
+	                    <td>
+	                    	<a href="https://gitee.com/hnaoyun/PbootCMS/" style="color:#666" target="_blank">Gitee</a> | 
+	                    	<a href="https://github.com/hnaoyun/PbootCMS/" style="color:#666" target="_blank">Github</a>
+	                    </td>
 	                </tr>
 	                
 	                <tr>
@@ -144,7 +147,7 @@
 	               
 	                <tr>
 	                    <th>技术交流群</th>
-	                    <td>137083872</td>
+	                    <td>137083872、636759350、511953276</td>
 	                </tr>
 	                
 	                <tr>
