--- a/apps/admin/view/default/common/ueditor.html
+++ b/apps/admin/view/default/common/ueditor.html
@@ -1,6 +1,6 @@
 <!-- 引入编辑器文件 -->
-<script type="text/javascript" charset="utf-8" src="{CORE_DIR}/extend/ueditor/ueditor.config.js?v=1.3.5"></script>
-<script type="text/javascript" charset="utf-8" src="{CORE_DIR}/extend/ueditor/ueditor.all.min.js?v=1.3.5"> </script>
+<script type="text/javascript" charset="utf-8" src="{CORE_DIR}/extend/ueditor/ueditor.config.js?v=v2.0.1"></script>
+<script type="text/javascript" charset="utf-8" src="{CORE_DIR}/extend/ueditor/ueditor.all.min.js?v=v2.0.1"> </script>
 <script type="text/javascript" charset="utf-8" src="{CORE_DIR}/extend/ueditor/lang/zh-cn/zh-cn.js?v=1.3.5"></script>
 <script>
 //初始化编辑器
