--- a/template/default/product.html
+++ b/template/default/product.html
@@ -62,7 +62,9 @@
                      	 产品价格：￥{content:ext_price}
                 </div>
                 <div class="my-3 lh-3">
-                     <a href="{pboot:siteindex}/about/11.html" class="btn btn-danger">马上咨询</a>
+                	{pboot:sort scode=11}
+                     <a href="[sort:link]" class="btn btn-danger">马上咨询</a>
+                    {/pboot:sort}
                 </div>
             </div>
       </div>
